# youtube-free-deep-research-cli

./: .env.example  .env.template  .gitignore  .installer_state.json  .pre-commit-config.yaml  .python311_path  .secrets.baseline  .semgrep.yml  .tts_config.json  COMPLETION_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  EMERGENCY_SECRET_REMOVAL.py  EXTENDED_TTS_RECOMMENDATIONS.md  FILE_UPLOAD_ARCHITECTURE.md  FILE_UPLOAD_FEATURE_IMPLEMENTATION.md  FINAL_SETUP_SUMMARY.md  IMMEDIATE_ACTION_STEPS.txt  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALLATION_ISSUES_AND_SOLUTIONS.md  LICENSE  MANIFEST.in  MELOTTS_IMPLEMENTATION_PLAN.md  MULTI_TIER_TTS_IMPLEMENTATION_STATUS.md  N8N_ALL_ERRORS_FIXED_FINAL.md  N8N_ALL_FIXES_COMPLETE_SUMMARY.md  N8N_GOOGLE_DRIVE_HARDCODED_REFERENCES_FIXED.md  N8N_INTEGRATION_ANALYSIS_AND_FIX.md  N8N_INTEGRATION_COMPLETE_SUMMARY.md  N8N_INTEGRATION_FIX_REPORT.md  N8N_INTEGRATION_FULLY_FIXED_FINAL.md  N8N_INTEGRATION_STATUS_FINAL.md  N8N_QUICK_REFERENCE.md  N8N_SETUP_COMPLETE_GUIDE.md  N8N_TROUBLESHOOTING_GUIDE.md  N8N_WORKFLOW_FIXES_APPLIED.md  N8N_WORKFLOW_FULLY_FIXED_CONFIRMED.md  OPENROUTER_KEY_ROTATION_IMPLEMENTATION.md  PYTHON_313_COMPATIBILITY_SOLUTION.md  (+105 more)
.github/: ci-touch.txt  dependabot.yml
.github/workflows/: quality-assurance.yml  security-audit.yml
.history/: .dockerignore_20251005034120  .dockerignore_20251005040305  .dockerignore_20251005043222  .dockerignore_20251005045130  .dockerignore_20251005045206  .env_20250930122021  .env_20251001024612  .env_20251003075528.example  .env_20251003084828.example  .env_20251005113338  .env_20251005141059  .env_20251014211327  .pre-commit-config_20251003112610.yaml  .pre-commit-config_20251003112628.yaml  .python311_path_20251001013155  CONTRIBUTING_20251003114053.md  CONTRIBUTING_20251003172249.md  Dockerfile_20251004232846  Dockerfile_20251005053535  QUICK_START_FILE_UPLOAD_20251001124901.md  REFACTORING_README_20251017035622.md  generate_podcast_from_transcript_20251008014539.py  generate_podcast_from_transcript_20251008014911.py  generate_podcast_from_transcript_20251008023452.py  generate_podcast_from_transcript_20251008025107.py  generate_podcast_from_transcript_20251008025543.py  generate_podcast_from_transcript_20251008034815.py  invoke_py311_20251005195824.py  prd_20250924221152.md  pyproject_20251004235909.toml  pyproject_20251005001512.toml  restart_api_server_20251001124403.bat  run_api_server_20251001102209.py  run_api_server_20251001103146.py  verify_chatterbox_import_20251007030404.py  verify_roles_20251005170331.py
.history/docs/: API_20251003064921.md  DEPENDENCY_MANAGEMENT_20251003120315.md  DEPENDENCY_MANAGEMENT_20251003135905.md  TROUBLESHOOTING_20251003064943.md  TROUBLESHOOTING_20251003083027.md  TROUBLESHOOTING_20251003085657.md
.history/installer/: install_20251004023003.ps1  install_20251004023548.ps1  setup_wizard_20251003171616.py  setup_wizard_20251004024307.py  setup_wizard_20251004024457.py  setup_wizard_20251004024521.py
.history/tests/: conftest_20251005001924.py  test_content_checks_20251003053141.py  test_content_checks_20251003054030.py  test_content_checks_20251003055152.py  test_scraper_playwright_fallback_20251003063149.py  test_search_aggregator_20251003053139.py  test_web_scraper_service_20251003053145.py  test_web_scraper_service_20251005000035.py  test_web_scraper_service_20251005010848.py  test_web_scraper_service_20251005011246.py  test_web_scraper_service_20251005011616.py
.history/youtube-chat-cli-main/: .env_20250924212113.template  (+22 more)
config/: default_config.yaml
docs/: AEGIS_SHIELD.md  AGENTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT_SUMMARY.md  MIGRATION_GUIDE.md  PLAYWRIGHT.md  PYPI_PREPARATION_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README.md  README_AGENTS.md  SECURITY_AUDIT.md  artifacts.md  helios-module-research-05.md  redis-8.2-integration-plan.md  research-aegis-shield-04.md  research-security-auditor-08.md  research-tech-stack-audit-2025-10-04.md  research-universal-installer-07.md
examples/: basic_usage.py  channel_monitoring_example.py  sample_config.env
installer/: config_validator.py  dependency_manager.py  install.sh  requirements_installer.txt
jaegis-youtube-chat-mcp/: .eslintrc.js  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
outputs/: faq.txt  summary.txt  toc.txt
scripts/: check_vector_info.py  install_dependencies.sh  publish_to_pypi.py  setup_pypi_publishing.sh  validate_package.py
tests/: __init__.py  test_aggregator_comprehensive.py  test_aggregator_recency.py  test_api_endpoints.py  test_archive_queue.py  test_brave_search_service.py  test_cli_commands.py  test_config_cli.py  test_config_new_keys.py  test_content_checks_integration.py  test_deep_research_integration.py  test_duplicate_detection.py  test_edge_cases.py  test_llm_fallback.py  test_observability.py  test_performance.py  test_scraper_comprehensive.py  test_scraper_playwright_fallback.py  test_search_aggregator.py  test_session_persistence.py  test_vector_fallback.py  test_web_scraper_service.py
tmp_ingest/: sample1.md  sample2.txt
workflow-EXAMPLES/: 01-DEEP-RESEARCH-Agents.json  02-Content-Checks-Workflow-Agents.json  flowchart-v2.xml
youtube_chat_cli_main/: .env.example  .env.template  .tts_config.json  API_DOCUMENTATION.md  BLUEPRINT.md  COMPLETE_TESTING_GUIDE.md  DASHBOARD_INTEGRATION.md  DASHBOARD_INTEGRATION_FIXES.md  DASHBOARD_TESTING.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS_REPORT.md  FREE_TIER_SETUP_GUIDE.md  GOOGLE_DRIVE_OAUTH_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Local RAG AI Agent.json  PHASE_3_COMPLETE.md  PORT_CHANGE_SUMMARY.md  PROJECT_COMPLETE.md  QUICK_FIX_GOOGLE_DRIVE.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_DASHBOARD.md  TESTING_GUIDE.md  TTS Library for Podcast Generation.md  VERIFICATION_STEPS.md  __main__.py  api_requirements.txt  audible_test_summary.txt  check_config.py  cli.py  client_secret.json  file_processor.py  final_test_summary.txt  fixed_podcast_summary.txt  llm_service.py  n8n_client.py  pytest.ini  requirements.txt  run_api_server.py  (+12 more)
(+613 files in other folders)
