[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-free-deep-research-cli"
version = "2.0.1"
description = "Production-ready Python 3.13+ CLI/API system with Adaptive RAG, multi-engine TTS, OpenRouter key rotation, FastAPI backend, and Next.js dashboard"
readme = "README.md"
authors = [
  { name = "JAEGIS / NexusSync", email = "use.manus.ai@gmail.com" }
]
maintainers = [
  { name = "JAEGIS / NexusSync", email = "use.manus.ai@gmail.com" }
]
requires-python = ">=3.13,<4"
license = { text = "MIT" }
keywords = [
  "python", "cli", "rag", "langchain", "fastapi", "tts", "openrouter",
  "youtube", "pdf-processing", "vector-database", "qdrant", "ollama",
  "nextjs", "adaptive-rag", "modular-architecture"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Communications :: Chat",
]

dependencies = [
  "click>=8.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.25.0",
  "halo>=0.0.31",
  "colorama>=0.4.6",
  "youtube-transcript-api>=0.6.0",
  "beautifulsoup4>=4.9.0",
  "deepmultilingualpunctuation>=1.0.1",
  "pypdf2>=3.0.0",
  "python-docx>=0.8.11",
  "markdown>=3.4.0",
  "html2text>=2020.1.16",
  "langchain>=0.1.0",
  "langchain-community>=0.0.20",
  "langchain-openai>=0.0.5",
  "langchain-huggingface>=0.0.1",
  "langgraph>=0.0.20",
  "langchain-core>=0.1.0",
  "google-auth>=2.16.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.1.0",
  "google-api-python-client>=2.80.0",
  "qdrant-client>=1.7.0",
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
  "openai>=1.0.0",
  "tavily-python>=0.3.0",
  "duckduckgo-search>=4.0.0",
  "pytesseract>=0.3.10",
  "pillow>=10.0.0",
  "pdf2image>=1.16.0",
  "apscheduler>=3.10.0",
  "gtts>=2.5.0",
  "pydub>=0.25.0",
  "edge-tts>=6.1.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "aiofiles>=24.1.0",
  "websockets>=13.1",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=5.0.0",
  "pytest-socket>=0.6.0",
  "responses>=0.25.0",
  "respx>=0.21.1",
  "black>=24.0.0",
  "flake8>=7.0.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/usemanusai/youtube-free-deep-research-cli"
Repository = "https://github.com/usemanusai/youtube-free-deep-research-cli"
Documentation = "https://github.com/usemanusai/youtube-free-deep-research-cli#readme"
"Bug Reports" = "https://github.com/usemanusai/youtube-free-deep-research-cli/issues"

[project.scripts]
youtube-chat = "youtube_chat_cli_main.cli.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["youtube_chat_cli_main*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.uv]
# Using uv with pyproject + uv.lock for reproducible resolves

